--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Exo:wght@500&family=Press+Start+2P&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/cee708e161.js" crossorigin="anonymous"></script>
+  <title2>if on mobile, zoom out for full experience</title2> <!--fix this soon!-->
   <title>Jordan Site</title>
 </head>
 <body>
@@ -18,8 +19,8 @@
       <div class="header__logo">
         <div class="burger">Hi. My name is Jordan. I am currently a high school student from New Jersey. That is all I will say for now.</div>
           <img src="sloge.jpg" alt="My dog, Jax" width="450" height="600" title="My dog Jax">
-        <p class="fries"> Website last updated as of 8/13/23</p>
-        <i class="fa-solid fa-bars" title="Coming soon"></i>
+        <p class="fries"> Website last updated as of 7/27/23</p>
+        <i class="fa-solid fa-bars" button="fa-solid fa-bars"></i>
       <a href="https://github.com/jordani268">
         <i class="fa-brands fa-github" title="My github account"></i></a>
       </div>
