--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" href="jordansite.png">
+  <link rel="icon" type="image/png" href="iconview.jpg"> <!--swap this with a pic of the dog eventually-->
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Exo:wght@500&family=Press+Start+2P&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/cee708e161.js" crossorigin="anonymous"></script>
-  <title>Jordan Site</title>
+  <title>Jordan's Site</title>
 </head>
 <body>
   <h1>Welcome to my Website</h1>
@@ -17,7 +17,7 @@
     <nav class="header__nav">
       <div class="header__logo">
         <div class="burger">Hi. My name is Jordan. I am currently a high school student from New Jersey. That is all I will say for now.</div>
-          <img src="sloge.jpg" alt="My dog, Jax" width="450" height="600" title="My dog Jax">
+          <img class="sloge" src="sloge.jpg" alt="My dog, Jax" width="450" height="600" title="My dog Jax">
         <p class="fries"> Website last updated as of 8/15/23</p>
         <i class="fa-solid fa-bars" button="fa-solid fa-bars"></i>
       <a href="https://github.com/jordani268">
