--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/jpg" href="iconview.jpg"> <!--swap this with a pic of the dog eventually-->
+  <link rel="icon" type="image" href="iconview.jpg"> <!--swap this with a pic of the dog eventually-->
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Exo:wght@500&family=Press+Start+2P&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/cee708e161.js" crossorigin="anonymous"></script>
