--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image" href="iconview.jpg"> <!--swap this with a pic of the dog eventually-->
+  <link rel="icon" type="image/png" href="iconview.jpg"> <!--swap this with a pic of the dog eventually-->
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Exo:wght@500&family=Press+Start+2P&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/cee708e161.js" crossorigin="anonymous"></script>
-  <title>Jordan's Site</title>
+  <title>Jordan Site</title>
 </head>
 <body>
   <h1>Welcome to my Website</h1>
