--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/png" href="iconview.jpg"> <!--swap this with a pic of the dog eventually--> <!--photo isnt working. fix this eventually -->
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Exo:wght@500&family=Press+Start+2P&display=swap" rel="stylesheet">
-  <title>Jordan Site</title>
+  <title>Jordan's Site</title>
 </head>
 <body>
   <h1>Welcome to my Website</h1>
