--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image" href="iconview.jpg"> <!--swap this with a pic of the dog eventually-->
+  <link rel="icon" type="image/png" href="iconview.jpg"> <!--swap this with a pic of the dog eventually-->
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Exo:wght@500&family=Press+Start+2P&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/cee708e161.js" crossorigin="anonymous"></script>
   <title>Jordan Site</title>
 </head>
 <body>
@@ -18,9 +19,9 @@
         <div class="burger">Hi. My name is Jordan. I am currently a high school student from New Jersey. That is all I will say for now.</div>
           <img class="sloge" src="sloge.jpg" alt="My dog, Jax" width="450" height="600" title="My dog Jax">
         <p class="fries"> Website last updated as of 8/19/23</p>
-        <i class="fa-solid fa-bars" button="fa-solid fa-bars" title="Coming Soon"></i>
-        <a href="https://github.com/jordani268">
-          <i class="fa-brands fa-github" title="My github account"></i></a>
+        <i class="fa-solid fa-bars" button="fa-solid fa-bars"></i>
+      <a href="https://github.com/jordani268">
+        <i class="fa-brands fa-github" title="My github account"></i></a>
       </div>
     </nav>
   </header>
